notification save APIs
